--- a/css/layout.css
+++ b/css/layout.css
@@ -57,11 +57,14 @@
 .ba-width-1-1{
 	width: 100%;
 }
-.ba-width-1-2{
-	width: 50%;
+.ba-width-3-4{
+	width: 75%;
 }
 .ba-width-2-3{
 	width: 66.666666%;
+}
+.ba-width-1-2{
+width: 50%;
 }
 .ba-width-1-3{
 	width: 33.333333%;
@@ -103,12 +106,14 @@
 .ba-grid-width-1-2 > * {
 	width: 50%;
 }
+.ba-grid-width-3-4 > * {
+	width: 75%;
+}
 .ba-grid-width-2-3 > * {
 	width: 66.666666%;
-
 }
 .ba-grid-width-1-3 > * {
-	width: 33,333333%;
+	width: 33.333333%;
 }
 .ba-grid-width-1-4 > * {
 	width: 25%;
@@ -234,6 +239,9 @@ $breakpoint-xlarge: 1220px; more than 1220px
 	.ba-width-small-1-1{
 		width: 100%;
 	}
+	.ba-width-small-3-4{
+		width: 75%;
+	}
 	.ba-width-small-2-3{
 		width: 66.666666%;
 	}
@@ -256,6 +264,9 @@ $breakpoint-xlarge: 1220px; more than 1220px
 @media (min-width: 768px){
 	.ba-width-medium-1-1{
 		width: 100%;
+	}
+	.ba-width-medium-3-4{
+		width: 75%;
 	}
 	.ba-width-medium-2-3{
 		width: 66.666666%;
@@ -280,6 +291,9 @@ $breakpoint-xlarge: 1220px; more than 1220px
 	.ba-width-large-1-1{
 		width: 100%;
 	}
+	.ba-width-large-3-4{
+		width: 75%;
+	}
 	.ba-width-large-2-3{
 		width: 66.666666%;
 	}
@@ -302,6 +316,9 @@ $breakpoint-xlarge: 1220px; more than 1220px
 @media (min-width: 1220px){
 	.ba-width-xlarge-1-1{
 		width: 100%;
+	}
+	.ba-width-xlarge-3-4{
+		width: 75%;
 	}
 	.ba-width-xlarge-2-3{
 		width: 66.666666%;
