--- a/css/style.css
+++ b/css/style.css
@@ -60,20 +60,12 @@ header{
 .menu li a:hover{
 	color: #ffffff;
 }
-.slider{
+.top-slider .slide{
 	height: 700px;
 	/*background: url("../img/slide1.jpg") no-repeat 100% 70%;*/
 	-webkit-background-size: cover;
 	background-size: cover;
-	/*padding-top: 200px;*/
-}
-.slider [class*="slide"]{
 	padding-top: 200px;
-	height: 100%;
-
-}
-.slider .container{
-	height: 100%;
 }
 h2{
 	color: #ffffff;
