--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ b{
 
 }
 header{
-	height: 110px;
+	/*height: 110px;*/
 	background: #141A1D;
 }
 .logo{
@@ -66,6 +66,7 @@ header{
 	-webkit-background-size: cover;
 	background-size: cover;
 	padding-top: 200px;
+	width: 100%;
 }
 h2{
 	color: #ffffff;
@@ -80,6 +81,7 @@ h2{
 	float: left;
 	position: absolute;
 	bottom: 47px;
+	z-index: 101;
 }
 .prev{
 	left: 40px;
