--- a/css/style.css
+++ b/css/style.css
@@ -23,29 +23,70 @@ b{
 header{
 	/*height: 110px;*/
 	background: #141A1D;
+	/*zoom: .75;*/
 }
 .logo{
 	display: block;
 	float: left;
-	width: 438px;
+	text-decoration: none;
+	text-transform: uppercase;
+	/*width: 538px;*/
 	height: 110px;
-	background: url("../img/logo.png");
+	line-height: 110px;
+
+	/*background: url("../img/logo.png");*/
+}
+.logo .square{
+	float: left;
+	width: 110px;
+	background-color: #FF5722;
+	color: #141A1D;
+	font-size: 83px;
+	/*line-height: 110px;*/
+	text-align: center;
+}
+.text{
+	font-family: Lato, Arial, sans-serif;
+	font-weight: 900;
+	color: #FF5722;
+	text-align: right;
+	line-height: 1;
+	padding-left: 10px;
+}
+.text .big{
+	font-size: 57px;
+	display: block;
+}
+.text .small{
+	font-size: 18px;
+	display: block;
 }
 .search{
 	float: right;
-	width: 110px;
-	height: 110px;
-	background: url("../img/search.png") 50% 50% no-repeat;
+	/*width: 110px;*/
+	/*height: 110px;*/
+	font-size: 43px;
+	padding: 0 25px;
+	line-height: 110px;
+	color: #03A9F4;
+	text-align: center;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	/*background: url("../img/search.png") 50% 50% no-repeat;*/
 }
 .menu{
 	float: right;
 }
 .menu li{
 	float: left;
+	line-height: 1;
 }
 .menu li a{
 	font-size: 24px;
 	line-height: 110px;
+
 	color: #637076;
 	padding-right: 14px;
 	padding-left: 14px;
@@ -62,13 +103,16 @@ header{
 }
 .top-slider .slide{
 	height: 700px;
-	/*background: url("../img/slide1.jpg") no-repeat 100% 70%;*/
 	-webkit-background-size: cover;
 	background-size: cover;
 	padding-top: 200px;
+	/*padding-bottom: 115px;*/
 	width: 100%;
 }
-h2{
+/*.top-slider .slide .container{*/
+	/*height: 100%;*/
+/*}*/
+.slide-title{
 	color: #ffffff;
 	font: 900 92px/1.1 Lato, Arial, sans-serif;
 	text-transform: uppercase;
@@ -77,6 +121,10 @@ h2{
 	width: 69px;
 	height: 69px;
 	background-color: #fff;
+	font-size: 65px;
+	line-height: 69px;
+	color: #000;
+	text-align: center;
 	opacity: .45;
 	float: left;
 	position: absolute;
@@ -362,6 +410,15 @@ h2{
 }
 .spoiler-title{
 	display: block;
+	/*padding-left: 10px;*/
+	position: relative;
+}
+.spoiler-title:before{
+	content: "\f055";
+	font-family: FontAwesome;
+	/*margin-right: 30px;*/
+	position: absolute;
+	left: 10px;
 }
 .spoilers input{
 	display: none;
@@ -381,6 +438,9 @@ input:checked + .spoiler>*{
 }
 input:checked + .spoiler>.spoiler-title{
 	font-weight: 700;
+}
+input:checked + .spoiler>.spoiler-title:before{
+	content: "\f056";
 }
 input:checked + .spoiler + input + .spoiler>.spoiler-title{
 	border-top-color: #03a9f4;
@@ -491,9 +551,13 @@ input:checked + .spoiler + input + .spoiler>.spoiler-title{
 	height: 60px;
 	display: inline-block;
 	border: 2px solid #263238;
+	color: #263238;
+	font-size: 30px;
+	line-height: 60px;
 }
 .socials a:hover{
 	background-color: #263238;
+	color: #EAE8E2;
 }
 .socials a + a {
 	margin-left: 6px;
@@ -502,6 +566,7 @@ input:checked + .spoiler + input + .spoiler>.spoiler-title{
 	text-align: center;
 }
 .f-name, .l-name, .msg{
+	font-size: 18px;
 	width: 100%;
 	padding: 15px 25px;
 	border: 1px solid #263238;
@@ -565,4 +630,49 @@ input:checked + .spoiler + input + .spoiler>.spoiler-title{
 }
 .site .red-word{
 	color: #e00f19;
+}
+
+@media (max-width:1550px) {
+	.logo, .search, .menu li a{
+		line-height: 90px;
+	}
+	.logo {
+		height: 90px;
+	}
+	.logo .square{
+		width: 90px;
+	}
+	.logo .text .big{
+		font-size: 45px;
+	}
+	.logo .text .small{
+		font-size: 14px;
+	}
+	.menu li a {
+		font-size: 20px;
+		padding-left: 7px;
+		padding-right: 7px;
+	}
+	.search{
+		font-size: 35px;
+		padding: 0 15px;
+	}
+}
+
+@media (max-width: 1220px) {
+	.top-slider .slide {
+		height: 500px;
+		padding-top: 65px;
+	}
+	.slide-title{
+		font-size: 82px;
+	}
+	.natural-stone{
+		padding-top: 50px;
+		padding-bottom: 50px;
+	}
+	.expectetion{
+		padding-top: 60px;
+		padding-bottom: 60px;
+	}
 }
