--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,9 @@ header{
 	padding-top: 110px;
 	padding-bottom: 108px;
 }
+.expectetion .rock-thumbnail{
+	width: 100%;
+}
 .main-label{
 	font: 300 72px/1.1 'Open Sans', Arial, sans-serif;
 	color: #263238;
@@ -480,6 +483,7 @@ header{
 }
 .gallery a img{
 	display: block;
+	width: 100%;
 }
 .work{
 	display: block;
@@ -770,6 +774,9 @@ input:checked + .spoiler + input + .spoiler>.spoiler-title{
 .site .red-word{
 	color: #e00f19;
 }
+.map iframe{
+	width: 100%;
+}
 @media (max-width:1550px) {
 	.logo, .search, .search-button, .search-icon, .menu>ul>li{
 		line-height: 90px;
@@ -891,6 +898,7 @@ input:checked + .spoiler + input + .spoiler>.spoiler-title{
 		padding-bottom: 40px;
 	}
 }
+
 @media (max-width: 1100px){
 	.logo .text{
 		display: none;
